# p2s

./: Cargo.toml
.github/workflows/: ci-release.yml
card/: Cargo.toml
card/src/: error.rs  lib.rs  ops.rs
consumer/: Cargo.toml
consumer/src/: error.rs  lib.rs  resolve.rs
dns-setup/: SETUP.md
dns-setup/freebsd/: setup.sh
dns-setup/linux/: p2s-resolve.service  setup-dnsmasq.sh  setup-systemd-resolved.sh
dns-setup/macos/: setup.sh  teardown.sh
dns-setup/windows/: p2s-resolve.xml  setup.ps1  teardown.ps1
docker/: .dockerignore  Dockerfile  docker-compose.yml
node/: Cargo.toml
node/src/: behaviour.rs  cli.rs  config.rs  event_loop.rs  http_api.rs  keypair_io.rs  lib.rs  main.rs  metrics.rs  node_state.rs  rate_limit.rs  record_store.rs  review_queue.rs  trust_weight.rs
proto/: Cargo.toml
proto/src/: card.rs  error.rs  lib.rs  mandate.rs  serialize.rs
publisher/: Cargo.toml
publisher/src/: challenge.rs  domain_proof.rs  error.rs  lib.rs
terraform/: clients.tf  deploy.sh  main.tf  netem.sh  outputs.tf  test_200.sh  variables.tf
terraform/client/: Dockerfile  publish_cards.sh
tests/network/: cross_region_bench.sh  gen_card.sh  last_metrics_snapshot.txt  metrics_dump.sh  run_tests.sh  topology.sh
tools/: Cargo.toml
tools/src/: card_gen.rs
validator/: Cargo.toml
validator/src/: error.rs  issuer.rs  lib.rs  verifier.rs
verifier/: Cargo.toml
verifier/src/: agent.rs  haiku_agent.rs  harden.rs  lib.rs  manifest.rs  pipeline.rs  sanitize.rs  stage1.rs  verdict.rs
verifier/tests/: anti_injection.rs
web/: Dockerfile  awe.s0me.uk.nginx.conf  docker-compose.yml
web/nginx/: default.conf
web/static/: index.html
