[workspace]
members = [
    "card",
    "proto",
    "node",
    "validator",
    "publisher",
    "verifier",
    "consumer",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Crypto
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
blake3 = "1"

# Serialization
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"

# Networking (libp2p)
libp2p = { version = "0.54", features = ["tokio", "kad", "noise", "tcp", "yamux", "identify", "dns", "macros"] }
tokio = { version = "1", features = ["full"] }

# HTTP
axum = "0.8"
serde_json = "1"
hex = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
thiserror = "2"
anyhow = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
assert_matches = "1"
