[package]
name = "p2s-card"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
p2s-proto = { path = "../proto" }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
