[package]
name = "p2s-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
p2s-card = { path = "../card" }
p2s-proto = { path = "../proto" }
libp2p = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
