[package]
name = "p2s-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "p2s-node"
path = "src/main.rs"

[dependencies]
p2s-card = { path = "../card" }
p2s-proto = { path = "../proto" }
p2s-verifier = { path = "../verifier" }
p2s-publisher = { path = "../publisher" }
libp2p = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
portable-atomic = "1"
sled = { workspace = true }

[dev-dependencies]
tempfile = "3"
