[package]
name = "p2s-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
