[package]
name = "p2s-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "p2s-card-gen"
path = "src/card_gen.rs"

[dependencies]
p2s-card = { path = "../card" }
p2s-proto = { path = "../proto" }
blake3 = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
