[package]
name = "p2s-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
p2s-card = { path = "../card" }
p2s-proto = { path = "../proto" }
serde = { workspace = true }
serde_bytes = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
