[package]
name = "p2s-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
p2s-card = { path = "../card" }
p2s-proto = { path = "../proto" }
p2s-publisher = { path = "../publisher" }
serde = { workspace = true }
serde_bytes = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"
